--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="index.css">
+    <meta name="description" content="Webpage of the Little Lemon Restaurant in Italy."/>
+    <meta name="og:title" content="Little Lemon Website"/>
+    <meta name="og:description" content="Little Lemon Open-Graph Website"/>
+    <meta name="og:image" content="LL_Logo"/>
     <title>React App</title>
   </head>
   <body>
